proj1/tests/correct/sliceTargetList.py
a = [0]
a[0:1] = [10, 11]
print a[0]

