proj1/tests/error/sliceTargetList2.py
l = []
l[0:1 = 10
print l[0]

